# minecraft-py

./: CHANGELOG.txt  README.md  main.py  pyproject.toml
.github/agents/: business.agent.md  good-code.agent.md
docs/: BUSINESS_CONTEXT.md
docs/features/: menu-title.feature.md
src/: block.py  hotbar.py  main.py  pause_menu.py  title_menu.py  world_chunk.py
