[project]
name = "minecraft-py"
version = "0.1.0"
description = "Minecraft-inspired 3D voxel game built with Python and Ursina engine. Procedurally generated terrain, block placement/destruction, creative flight mode, and first-person exploration."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "perlin-noise>=1.14",
    "ursina>=8.0.1",
]

[tool.uv]
package = true
